--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "babel-loader": "^6.4.1",
     "babel-preset-env": "^1.2.2",
     "css-loader": "^0.27.3",
+    "express": "^4.15.2",
     "rimraf": "^2.6.1",
     "style-loader": "^0.14.1",
     "webpack": "^2.2.1",
