--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "dist/qna-widget.js",
   "scripts": {
     "build": "npm run clean && NODE_ENV=production webpack",
-    "start": "webpack-dev-server",
+    "dev": "webpack-dev-server",
+    "start": "node server",
     "clean": "rimraf ./dist"
   },
   "keywords": [
@@ -23,6 +24,7 @@
     "express": "^4.15.2",
     "rimraf": "^2.6.1",
     "style-loader": "^0.14.1",
+    "url-loader": "^0.5.8",
     "webpack": "^2.2.1",
     "webpack-dev-server": "^2.4.2",
     "webpack-uglify-js-plugin": "^1.1.9"
