--- a/package.json
+++ b/package.json
@@ -28,5 +28,8 @@
     "webpack": "^2.2.1",
     "webpack-dev-server": "^2.4.2",
     "webpack-uglify-js-plugin": "^1.1.9"
+  },
+  "devDependencies": {
+    "url-loader": "^0.5.8"
   }
 }
