--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "webpack-uglify-js-plugin": "^1.1.9"
   },
   "devDependencies": {
+    "file-loader": "^0.11.1",
+    "style-loader": "^0.14.1",
     "to-string-loader": "^1.1.5",
     "url-loader": "^0.5.8"
   }
