--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "webpack-uglify-js-plugin": "^1.1.9"
   },
   "devDependencies": {
+    "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "file-loader": "^0.11.1",
     "style-loader": "^0.14.1",
     "to-string-loader": "^1.1.5",
