--- a/package.json
+++ b/package.json
@@ -32,8 +32,10 @@
   "devDependencies": {
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "file-loader": "^0.11.1",
+    "raw-loader": "^0.5.1",
     "style-loader": "^0.14.1",
     "to-string-loader": "^1.1.5",
-    "url-loader": "^0.5.8"
+    "url-loader": "^0.5.8",
+    "webpack-manifest-plugin": "^1.1.0"
   }
 }
